# fp-second-lab

./: .ocamlformat  README.md  dune-project  pre_bag_lab.opam
.github/workflows/: ci.yml
lib/: dune  pre_bag.ml  pre_bag.mli
test/: dune  test_pre_bag.ml
