opam-version: "2.0"
version: "0.1.0"
synopsis: "Immutable prefix-tree bag with property-based tests"
description:
  "Implementation of a polymorphic multiset (bag) backed by a prefix tree with unit and property-based tests for FP lab #2."
maintainer: "ivanzuk"
authors: "ivanzuk"
license: "MIT"
homepage: "https://github.com/ivanzuk/fp-pre-bag"
depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.10"}
  "alcotest" {with-test}
  "ocamlformat" {with-test & = "0.28.1"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/ivanzuk/fp-pre-bag.git"
